--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -59,3 +59,12 @@
   </div>
   
 </div>
+<h2 class="title-postre">Users:</h2>
+<div class="container">
+<div class="card" style="width: 18rem;">
+    <img src="https://sugarspunrun.com/wp-content/uploads/2018/07/Ice-Cream-Cone-Cupcakes-Recipe-1-of-1-6.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Ice Cream</h5>
+      <a href="#" class="btn btn-primary" [routerLink]="['/detalles/0']">Detalles</a>
+    </div>
+  </div>
